--- a/.github/workflows/wiki.yaml
+++ b/.github/workflows/wiki.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - "docs/**"
+      - "!docs/graypaper/**"
   workflow_dispatch:
   gollum:
 
@@ -38,7 +39,6 @@ jobs:
           WIKI_URL="https://${{ secrets.DESERT_ROBOT_PAT }}@github.com/${{ github.repository }}.wiki.git"
           TMP_DIR=$(mktemp -d -t ci-XXXXXXXXXX)
           echo "TMP_DIR=$TMP_DIR" >> $GITHUB_ENV
-          
           cd $TMP_DIR
           git init
           git pull $WIKI_URL
@@ -46,9 +46,7 @@ jobs:
       - name: Sync Content
         run: |
           COMMIT_MSG="chore(docs): Sync ${{ steps.sync-direction.outputs.source }} to ${{ steps.sync-direction.outputs.destination }}"
-          
           git remote remove origin
-          
           if [ "${{ steps.sync-direction.outputs.destination }}" = "wiki" ]; then
             # Sync to wiki
             rsync -avzr --delete --exclude='.git/' "${{ steps.sync-direction.outputs.source }}/" "$TMP_DIR"
@@ -59,8 +57,8 @@ jobs:
             git remote add origin "https://x-access-token:${{ secrets.DESERT_ROBOT_PAT }}@github.com/${{ github.repository }}.wiki.git"
             git push origin master
           else
-            # Sync from wiki to docs
-            rsync -avzr --delete --exclude='.git/' "$TMP_DIR/" "${{ steps.sync-direction.outputs.source }}"
+            # Sync from wiki to docs, excluding graypaper
+            rsync -avzr --delete --exclude='.git/' --exclude='graypaper/**' "$TMP_DIR/" "${{ steps.sync-direction.outputs.source }}"
             cd $GITHUB_WORKSPACE
             git add .
             git diff-index --quiet HEAD || git commit -m "$COMMIT_MSG"
