--- a/.github/workflows/graypaper.yaml
+++ b/.github/workflows/graypaper.yaml
@@ -1,19 +1,24 @@
-name: LaTeX Graypaper
+name: graypaper.yaml
 
 on:
-  push:
-    paths:
-      - docs/graypaper/**
   workflow_dispatch:
+  workflow_call:
+    outputs:
+      artifact_name:
+        description: "The name of the artifact containing the graypaper PDFs"
+        value: pdfs
 
 permissions:
   pages: write
-  contents: write
   id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ github.event_name != 'workflow_call' && 'github-pages' || '' }}
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - uses: actions/checkout@v3
 
@@ -44,9 +49,20 @@ jobs:
           mv ./docs/graypaper/diploma.pdf gh-pages/diploma.pdf
           mv ./docs/graypaper/graypaper.pdf gh-pages/graypaper.pdf
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload PDFs as artifact
+        uses: actions/upload-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: gh-pages
-          keep_files: true
+          name: pdfs
+          path: gh-pages/
+          retention-days: 1
+
+      - name: Upload Pages artifact
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: gh-pages
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        uses: actions/deploy-pages@v4
