--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -1,11 +1,12 @@
-name: Deploy website to GitHub Pages
+name: website.yaml
+
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - website/**
   workflow_dispatch:
+  workflow_call:
+    outputs:
+      artifact_name:
+        description: "The name of the artifact containing the website build"
+        value: github-pages-${{ github.run_id }}
 
 permissions:
   pages: write
@@ -15,7 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment:
-      name: github-pages
+      name: ${{ github.event_name != 'workflow_call' && 'github-pages' || '' }}
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
@@ -34,11 +35,19 @@ jobs:
         working-directory: website
         run: yarn build
 
-      - name: Upload Pages artifact
+      - name: Upload Artifact for Reuse in Combined Workflow
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages-${{ github.run_id }}
+          path: website/dist
+
+      - name: Upload Pages Artifact for Direct Deployment
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: website/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/deploy-pages@v4
