--- a/app/package.json
+++ b/app/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-community/slider": "^4.5.6",
     "@twa-dev/sdk": "^6.9.2",
     "expo": "~52.0.43",
+    "expo-blur": "^14.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
