--- a/app/package.json
+++ b/app/package.json
@@ -18,31 +18,44 @@
     "deploy:mobile": "eas build --platform all --profile production"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "^4.0.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/slider": "^4.5.6",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/material-top-tabs": "6.6.5",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/native-stack": "6.9.17",
+    "@react-navigation/stack": "6.3.20",
+    "@shopify/react-native-skia": "^1.12.3",
     "@twa-dev/sdk": "^6.9.2",
     "@types/three": "^0.175.0",
     "expo": "~52.0.43",
+    "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "^14.0.2",
-    "expo-router": "^4.0.20",
     "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "^2.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "^3.17.3",
-    "react-native-safe-area-context": "^4.11.1",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-native-web": "~0.19.9",
-    "react-native-webview": "^13.2.2",
+    "react-native-tab-view": "3.5.2",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "^13.13.5",
+    "react-navigation": "^5.0.0",
     "three": "^0.175.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.2",
+    "@types/react-native": "^0.73.0",
     "eas-cli": "^5.9.1",
     "typescript": "^5.3.3"
   },
