--- a/.github/workflows/diploma.yaml
+++ b/.github/workflows/diploma.yaml
@@ -13,6 +13,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - uses: actions/checkout@v3
@@ -36,8 +39,8 @@ jobs:
       - name: Compile PDF
         shell: bash
         run: |
-          docker run --rm -i -v ./docs/:/diplom:Z 2109199812/docker-latex bash -c "make clean && make diploma.pdf"
-          docker run --rm -i -v ./docs/:/diplom:Z 2109199812/docker-latex bash -c "make clean && make graypaper.pdf"
+          docker run --rm -i -v ./docs:/diploma:Z -w /diploma 2109199812/docker-latex bash -c "make clean && make diploma.pdf"
+          docker run --rm -i -v ./docs:/diploma:Z -w /diploma 2109199812/docker-latex bash -c "make clean && make graypaper.pdf"
 
       - name: Prepare release artifacts
         run: |
@@ -53,12 +56,10 @@ jobs:
           retention-days: 1
 
       - name: Upload Pages artifact
-        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: gh-pages
 
       - name: Deploy to GitHub Pages
         id: deployment
-        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/deploy-pages@v4
