--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,16 @@
     "deploy:mobile": "eas build --platform all --profile production"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-mono": "^0.3.0",
+    "@expo-google-fonts/dynapuff": "^0.3.0",
+    "@expo-google-fonts/fredoka-one": "^0.2.3",
+    "@expo-google-fonts/hind": "^0.3.0",
+    "@expo-google-fonts/inter": "^0.3.0",
+    "@expo-google-fonts/nunito": "^0.3.0",
+    "@expo-google-fonts/open-sans": "^0.3.0",
+    "@expo-google-fonts/roboto": "^0.3.0",
+    "@expo-google-fonts/roboto-mono": "^0.3.0",
+    "@expo-google-fonts/source-code-pro": "^0.3.0",
     "@expo/metro-runtime": "^4.0.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/slider": "^4.5.6",
@@ -32,9 +42,10 @@
     "expo": "~52.0.43",
     "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
-    "expo-font": "^13.0.4",
+    "expo-font": "~13.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-video": "^2.0.6",
     "react": "18.3.1",
