add root navigation

--- a/app/package.json
+++ b/app/package.json
@@ -28,8 +28,8 @@
     "@expo-google-fonts/roboto": "^0.3.0",
     "@expo-google-fonts/roboto-mono": "^0.3.0",
     "@expo-google-fonts/source-code-pro": "^0.3.0",
-    "@expo/metro-runtime": "^4.0.1",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "6.5.11",
     "@react-navigation/material-top-tabs": "6.6.5",
@@ -42,6 +42,8 @@
     "expo": "~52.0.43",
     "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
+    "expo-camera": "^16.0.18",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
@@ -59,7 +61,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "3.5.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
     "three": "^0.175.0"
   },
@@ -68,6 +70,7 @@
     "@types/react": "^19.1.2",
     "@types/react-native": "^0.73.0",
     "eas-cli": "^5.9.1",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
   "private": true
