fix background animation

--- a/app/app.json
+++ b/app/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.wtf403.o0"
     },
     "android": {
       "adaptiveIcon": {
