--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "start:mobile": "expo start --config app.mobile.json",
     "start:web": "expo start --web --config app.web.json",
@@ -32,8 +32,8 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "6.5.11",
-    "@react-navigation/material-top-tabs": "6.6.5",
-    "@react-navigation/native": "6.1.9",
+    "@react-navigation/material-top-tabs": "7.0.0",
+    "@react-navigation/native": "7.0.0",
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.3.20",
     "@shopify/react-native-skia": "^1.12.3",
@@ -43,19 +43,22 @@
     "expo-av": "^15.0.2",
     "expo-blur": "^14.0.3",
     "expo-camera": "^16.0.18",
+    "expo-dev-client": "^5.0.20",
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
+    "expo-gl": "^15.0.5",
     "expo-linear-gradient": "^14.0.2",
     "expo-sensors": "~14.0.2",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-three": "^8.0.0",
     "expo-video": "^2.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-pager-view": "^6.7.0",
-    "react-native-reanimated": "^3.17.3",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
