--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,20 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start:mobile": "expo start --config app.mobile.json",
-    "start:web": "expo start --web --config app.web.json",
-    "start:tg": "expo start --web --config app.tg.json",
-    "build:web": "expo export -p web --config app.web.json",
-    "build:tg": "expo export -p web --config app.tg.json",
-    "build:mobile": "eas build --platform all --profile production",
-    "deploy:web": "expo export -p web --config app.web.json",
-    "deploy:tg": "expo export -p web --config app.tg.json",
+    "telegram": "node tg/serve.js",
+    "build:web": "expo export -p web",
+    "build:tg": "expo export -p web && cp -r tg/index.html web-build/",
+    "build:android": "eas build --platform android --local --profile development",
+    "build:ios": "eas build --platform ios --local --profile development",
+    "build:expo": "eas build --platform all --profile production",
+    "deploy:web": "expo export -p web",
+    "deploy:tg": "expo export -p web && cp -r tg/index.html web-build/",
     "deploy:mobile": "eas build --platform all --profile production"
   },
   "dependencies": {
@@ -28,7 +28,7 @@
     "@expo-google-fonts/roboto": "^0.3.0",
     "@expo-google-fonts/roboto-mono": "^0.3.0",
     "@expo-google-fonts/source-code-pro": "^0.3.0",
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "6.5.11",
@@ -36,43 +36,42 @@
     "@react-navigation/native": "7.0.0",
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.3.20",
-    "@shopify/react-native-skia": "^1.12.3",
-    "@twa-dev/sdk": "^6.9.2",
-    "@types/three": "^0.175.0",
-    "expo": "~52.0.43",
-    "expo-av": "^15.0.2",
-    "expo-blur": "^14.0.3",
-    "expo-camera": "^16.0.18",
-    "expo-dev-client": "^5.0.20",
-    "expo-file-system": "^18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-gl": "^15.0.5",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-sensors": "~14.0.2",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
+    "@shopify/react-native-skia": "2.0.0-next.2",
+    "@telegram-apps/sdk": "^3.9.2",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-file-system": "~18.1.8",
+    "expo-font": "~13.3.1",
+    "expo-gl": "~15.1.5",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-sensors": "~14.1.4",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
     "expo-three": "^8.0.0",
-    "expo-video": "^2.0.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-pager-view": "6.5.1",
+    "expo-video": "~2.1.8",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "3.5.2",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "react-navigation": "^5.0.0",
     "three": "^0.175.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "^19.1.2",
-    "@types/react-native": "^0.73.0",
+    "@types/react": "~19.0.10",
     "eas-cli": "^5.9.1",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
