--- a/.github/nginx.conf
+++ b/.github/nginx.conf
@@ -7,7 +7,7 @@ server {
 
 server {
     listen 443 ssl;
-    listen [::]:443 ssl ipv6only=on;
+    listen [::]:443 ssl;
     server_name o0.network;
 
     ssl_certificate /etc/letsencrypt/live/o0.network/fullchain.pem;
@@ -15,16 +15,21 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location / {
-        proxy_pass http://127.0.0.1:4173;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    location = / {
+        root /var/www/o0/www;
+        try_files /index.html =404;
+    }
+
+    location /api/ {
+        proxy_pass http://127.0.0.1:5555;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+    }
+
+    location / {
+        root /var/www/o0/client;
+        try_files $uri $uri/ /index.html;
     }
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
