--- a/.github/workflows/nginx.yaml
+++ b/.github/workflows/nginx.yaml
@@ -23,8 +23,8 @@ jobs:
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_rsa
 
-      - name: Copy and test nginx configuration
+      - name: Restart Nginx
         run: |
-          scp .github/nginx.conf ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/etc/nginx/sites-available/o0.temp.conf
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd /etc/nginx/sites-available && sudo nginx -t -c o0.temp.conf \
-           && sudo mv o0.temp.conf o0.conf && sudo systemctl reload nginx"
+          scp .github/nginx.conf ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/etc/nginx/sites-available/o0.network.temp.conf
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd /etc/nginx/sites-available && sudo nginx -t -c o0.network.temp.conf \
+           && sudo mv o0.network.temp.conf o0.network.conf && sudo systemctl reload nginx"
