--- a/client/package.json
+++ b/client/package.json
@@ -4,30 +4,23 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
+    "start:tg": "expo start --web --config app.tg.json",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "telegram": "node tg/serve.js",
-    "build:web": "expo export -p web",
-    "build:tg": "expo export -p web && cp -r tg/index.html web-build/",
+    "build:web": "expo export -p web --config app.web.json",
+    "build:tg": "expo export -p web --config app.tg.json",
     "build:android": "eas build --platform android --local --profile development",
     "build:ios": "eas build --platform ios --local --profile development",
     "build:expo": "eas build --platform all --profile production",
-    "deploy:web": "expo export -p web",
-    "deploy:tg": "expo export -p web && cp -r tg/index.html web-build/",
+    "deploy:web": "expo export -p web --config app.web.json",
+    "deploy:tg": "expo export -p web --config app.tg.json",
     "deploy:mobile": "eas build --platform all --profile production"
   },
   "dependencies": {
     "@expo-google-fonts/dm-mono": "^0.3.0",
     "@expo-google-fonts/dynapuff": "^0.3.0",
-    "@expo-google-fonts/fredoka-one": "^0.2.3",
-    "@expo-google-fonts/hind": "^0.3.0",
-    "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/nunito": "^0.3.0",
-    "@expo-google-fonts/open-sans": "^0.3.0",
-    "@expo-google-fonts/roboto": "^0.3.0",
-    "@expo-google-fonts/roboto-mono": "^0.3.0",
-    "@expo-google-fonts/source-code-pro": "^0.3.0",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
@@ -38,6 +31,9 @@
     "@react-navigation/stack": "6.3.20",
     "@shopify/react-native-skia": "2.0.0-next.2",
     "@telegram-apps/sdk": "^3.9.2",
+    "@telegram-apps/sdk-react": "^3.2.4",
+    "@twa-dev/sdk": "^6.9.2",
+    "@types/three": "^0.175.0",
     "expo": "^53.0.0",
     "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
@@ -52,6 +48,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-three": "^8.0.0",
     "expo-video": "~2.1.8",
+    "js-confetti": "^0.12.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
