--- a/www/package.json
+++ b/www/package.json
@@ -22,8 +22,11 @@
     "vite-plugin-html": "^3.2.2"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
     "js-confetti": "^0.12.0",
     "matter-js": "^0.20.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "three": "^0.176.0"
   }
 }
