--- a/.github/workflows/www.yaml
+++ b/.github/workflows/www.yaml
@@ -11,6 +11,9 @@ jobs:
   build:
     name: Build and Deploy WWW
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: www
 
     steps:
       - name: Checkout code
@@ -24,7 +27,7 @@ jobs:
           cache-dependency-path: 'www/yarn.lock'
 
       - name: Install dependencies
-        run: cd www && yarn install
+        run: yarn install
 
       - name: Build and Deploy
-        run: cd www && yarn build && rsync -avz --delete dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/o0/www/
+        run: yarn build && rsync -avz --delete dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/o0/www/
