--- a/.github/nginx.conf
+++ b/.github/nginx.conf
@@ -6,14 +6,25 @@ server {
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    listen 443 quic reuseport;
+    listen [::]:443 quic reuseport;
     server_name o0.network;
 
     ssl_certificate /etc/letsencrypt/live/o0.network/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/o0.network/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # HTTP/3 specific settings
+    http3 on;
+    quic_retry on;
+    ssl_early_data on;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    # Add Alt-Svc header to advertise HTTP/3 support
+    add_header Alt-Svc 'h3=":443"; ma=86400';
 
     location = / {
         root /var/www/o0/www;
