--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -1,6 +1,7 @@
 name: client.yaml
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -23,8 +24,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
-          cache: 'yarn'
-          cache-dependency-path: 'client/package.json'
+          cache: "yarn"
+          cache-dependency-path: "client/package.json"
 
       - name: Install dependencies
         run: yarn install
