--- a/.github/workflows/nginx.yaml
+++ b/.github/workflows/nginx.yaml
@@ -24,6 +24,9 @@ jobs:
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/id_rsa
 
+      - name: Add known hosts
+        run: ssh-keyscan -H "${{ secrets.SSH_HOST }}" >> ~/.ssh/known_hosts
+
       - name: Restart Nginx
         run: |
           scp .github/nginx.conf ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/etc/nginx/sites-available/o0.network.temp.conf
