--- a/.github/workflows/www.yaml
+++ b/.github/workflows/www.yaml
@@ -27,6 +27,17 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "www/yarn.lock"
 
+      - name: Install SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
+
+      - name: Add known hosts
+        run: ssh-keyscan -H "${{ secrets.SSH_HOST }}" >> ~/.ssh/known_hosts
+
       - name: Install dependencies
         run: yarn install
 
