--- a/.github/workflows/www.yaml
+++ b/.github/workflows/www.yaml
@@ -7,7 +7,7 @@ on:
       - main
     paths:
       - "www/**"
-
+      - ".github/workflows/www.yaml"
 jobs:
   build:
     name: Build and Deploy WWW
