fix www on mobile

--- a/.github/nginx.conf
+++ b/.github/nginx.conf
@@ -6,27 +6,48 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
     listen 443 quic reuseport;
     listen [::]:443 quic reuseport;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name o0.network;
+
+    http2 on;
 
     ssl_certificate /etc/letsencrypt/live/o0.network/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/o0.network/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    http3 on;
-    quic_retry on;
     ssl_early_data on;
-    ssl_protocols TLSv1.2 TLSv1.3;
 
     add_header Alt-Svc 'h3=":443"; ma=86400';
+
+    location = /a {
+        return 301 https://apps.apple.com/app/id6469883603;
+    }
+
+    location = /g {
+        return 301 https://play.google.com/store/apps/details?id=com.o0.app;
+    }
+
+    location /graypaper.pdf {
+        proxy_pass https://o0network.github.io/o0/graypaper.pdf;
+        proxy_set_header Host o0network.github.io;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Content-Type application/pdf;
+        add_header Content-Disposition "inline; filename=graypaper.pdf";
+    }
 
     location = / {
         root /var/www/o0/www;
         try_files /index.html =404;
+    }
+
+    location /www/ {
+        root /var/www/o0;
+        try_files $uri $uri/ =404;
     }
 
     location /api/ {
