www video playback changes

--- a/.github/nginx.conf
+++ b/.github/nginx.conf
@@ -40,6 +40,15 @@ server {
         add_header Content-Disposition "inline; filename=graypaper.pdf";
     }
 
+    location /privacy.pdf {
+        proxy_pass https://o0network.github.io/o0/privacy.pdf;
+        proxy_set_header Host o0network.github.io;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Content-Type application/pdf;
+        add_header Content-Disposition "inline; filename=privacy.pdf";
+    }
+
     location = / {
         root /var/www/o0/www;
         try_files /index.html =404;
