--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "cross-env NODE_ENV=development expo start",
     "build": "expo export -p web",
     "preview": "vite preview",
     "build:android": "eas build --platform android --local --profile development",
@@ -15,37 +15,35 @@
     "@expo-google-fonts/dynapuff": "^0.3.0",
     "@expo-google-fonts/nunito": "^0.3.0",
     "@expo/metro-runtime": "~5.0.4",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
-    "@react-navigation/bottom-tabs": "6.5.11",
-    "@react-navigation/material-top-tabs": "7.0.0",
+    "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "7.0.0",
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.3.20",
-    "@shopify/react-native-skia": "2.0.0-next.2",
+    "@telegram-apps/bridge": "^2.8.2",
     "@telegram-apps/sdk": "^3.9.2",
-    "@telegram-apps/sdk-react": "^3.2.4",
-    "@twa-dev/sdk": "^6.9.2",
     "@types/three": "^0.175.0",
     "expo": "^53.0.0",
-    "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.8",
     "expo-font": "~13.3.1",
     "expo-gl": "~15.1.5",
+    "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-three": "^8.0.0",
-    "expo-video": "~2.1.8",
+    "expo-video": "^2.1.9",
     "js-confetti": "^0.12.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
@@ -60,7 +58,10 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-video": "^5.0.20",
+    "cross-env": "^7.0.3",
     "eas-cli": "^5.9.1",
+    "eruda": "^3.4.1",
     "metro-react-native-babel-transformer": "^0.77.0",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
