--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
   "name": "o0-server",
   "version": "1.0.0",
-  "description": "Backend server for o0 app with IPFS database",
+  "description": "O0 Video API Server",
+  "main": "server.js",
+  "type": "module",
   "license": "MIT",
-  "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
-    "@fastify/cors": "^7.0.0",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/static": "^8.1.1",
+    "bs58": "^6.0.0",
     "dotenv": "^16.5.0",
-    "fastify": "^3.27.0",
-    "fastify-static": "^4.5.0",
+    "fastify": "^5.3.2",
     "ipfs-core": "^0.14.0"
   },
   "devDependencies": {
+    "@mcp-it/fastify": "^0.1.0",
     "nodemon": "^2.0.15"
   }
 }
