--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -36,8 +36,9 @@ jobs:
         run: |
           rsync -avz --delete \
             --exclude='.env' \
+            --exclude='videos' \
             . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/o0/server/
 
       - name: Reload service
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'docker restart server'
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'docker restart o0server'
