--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -37,4 +37,4 @@ jobs:
             . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/o0/bot
 
       - name: Reload service
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'docker restart o0netbot'
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd /var/www/o0/bot && bash run.sh'
