--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Reload service
         run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'docker restart o0server'
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd /var/www/o0/server && bash run.sh'
