--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/arm64 jrottenberg/ffmpeg:7.1-ubuntu2404-edge
+FROM postgres:17
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -9,7 +9,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
-    # libgl1 and libgl1-mesa-glx removed as they caused issues
     # Install Node.js and yarn
     curl \
     gnupg \
@@ -22,16 +21,14 @@ WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+RUN yarn install
 
 # Copy the rest of the application code
 COPY . .
-# Ensure server.js is copied. If it's in a subdirectory, COPY . . will handle it.
-# If server.js is at the root and you prefer explicit, you can keep:
-# COPY server.js .
 
 EXPOSE 5555
 
-ENTRYPOINT [""]
-# Ensure your package.json has a "start" script, e.g., "start": "node server.js"
+# Set entrypoint to null (empty array) to override postgres default entrypoint
+ENTRYPOINT []
+# Start the application with yarn
 CMD ["yarn", "start"]
