--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "bs58": "^6.0.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
-    "ipfs-core": "^0.14.0"
+    "ipfs-core": "^0.14.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@mcp-it/fastify": "^0.1.0",
