--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,9 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-tab-view": "3.5.2",
+    "react-native-wagmi-charts": "^2.7.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-navigation": "^5.0.0",
