--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/static": "^8.1.1",
     "bs58": "^6.0.0",
     "dotenv": "^16.5.0",
