--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,32 @@
     "build:expo": "eas build --platform all --profile production"
   },
   "dependencies": {
+    "@ethersproject/sha2": "5.7.0",
+    "@ethersproject/shims": "5.7.0",
     "@expo-google-fonts/dm-mono": "^0.3.0",
     "@expo-google-fonts/dynapuff": "^0.3.0",
     "@expo-google-fonts/nunito": "^0.3.0",
     "@expo/metro-runtime": "~5.0.4",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "7.0.0",
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.3.20",
+    "@reown/appkit": "^1.7.8",
+    "@reown/appkit-adapter-ethers5": "^1.7.8",
+    "@reown/appkit-ethers5-react-native": "^1.2.4",
+    "@reown/appkit-utils": "^1.7.8",
     "@telegram-apps/bridge": "^2.8.2",
     "@telegram-apps/sdk": "^3.9.2",
     "@types/three": "^0.175.0",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/react-native-compat": "^2.21.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "ethers": "5.7.2",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
@@ -40,10 +52,12 @@
     "expo-three": "^8.0.0",
     "expo-video": "^2.1.9",
     "js-confetti": "^0.12.0",
+    "process": "^0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "^3.17.5",
@@ -55,10 +69,15 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-navigation": "^5.0.0",
-    "three": "^0.175.0"
+    "stream-browserify": "^3.0.0",
+    "three": "^0.175.0",
+    "valtio": "1.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.27.4",
+    "@babel/runtime": "^7.27.4",
     "@types/react": "~19.0.10",
     "@types/react-native-video": "^5.0.20",
     "cross-env": "^7.0.3",
